use built-in implementation of Gervill rather than external jar
This gets us bugfixes and eliminates a dependency.  The downside
is that we have to use reflection to instantiate the
SoftSynthesizer and open an AudioInputStream.